# ChessCadets

./: .gitattributes  .gitignore  .ignore  Chess4k.uproject  ChessKids.code-workspace  ChessKids.uproject  README.md  generate_textures.py
Chess3DK/Source/: CMakeLists.txt  bitboard.cpp  main.cpp  movegenerator.h  notation.cpp  notation.h  perft.cpp  perft.h  protocol.h  pulse.cpp  pulse.h  search.cpp
Chess3DK/Source/model/: castling.cpp  castlingtype.h  color.cpp  file.h  move.cpp  piece.cpp  piecetype.cpp  piecetype.h  square.cpp  square.h  value.cpp  value.h
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: BP_BackgroundSpawner.uasset  BP_KingNPC.uasset  BP_ProceduralSpawner.uasset  BP_Tree.uasset  BP_TreeMesh.uasset  KingPieceAni.uasset  M_Landscape.uasset  M_SkySphere.uasset  Meshy_AI_Animation_Wave_One_Hand_without_skin.uasset  Meshy_AI_Character_output_PhysicsAsset.uasset  Meshy_AI_Character_output_Skeleton.uasset  Untitled.umap  Untitled_HLOD0_Instancing.uasset
Content/Blueprints/: BP_OrbitCar.uasset  ChessGameMode.uasset  GM_Tutorial.uasset  WBP_PuzzleIntro.uasset  WBP_TutorialIntro.uasset
Content/GeneratedTextures/: IMG_3483.uasset  IMG_3483_Mat.uasset
Content/Maps/: L_Axiom.umap  L_Bishop.umap  L_Field.umap  L_Field_HLOD0_Instancing.uasset  L_Grid.umap  L_Knight.umap  L_Pawn.umap  L_Rook.umap  L_Royalty.umap  L_Tutorial_Bishop.umap  L_Tutorial_King.umap  L_Tutorial_Knight.umap  L_Tutorial_Pawn.umap  MainMenu.umap  (+2 more)
Docs/: TUTORIAL_LEVEL_DESIGNS.md
Source/: Chess4k.Target.cs  Chess4kEditor.Target.cs  ChessKids.Target.cs  ChessKidsEditor.Target.cs
(+598 files in other folders)
